# LYRA

./: .dockerignore  .env.example  .gitignore  README.md  TODO.md  build.sh  compose.yml
proto/: service.proto
services/api-gateway/: Containerfile  go.mod
services/api-gateway/cmd/: main.go
services/api-gateway/internal/: config.go  errors.go  models.go  server.go
services/api-gateway/internal/clients/: redis.go  whisper.go
services/api-gateway/internal/config/: config.go
services/api-gateway/internal/errors/: errors.go
services/api-gateway/internal/handlers/: health.go  task.go  transcribe.go
services/api-gateway/internal/models/: models.go
services/api-gateway/internal/server/: server.go
services/telegram-bot/: Containerfile  pyproject.toml
services/telegram-bot/src/: config.py  errors.py  main.py
services/telegram-bot/src/bot/: commands.py  init.py
services/telegram-bot/src/clients/: gateway.py  minio.py
services/telegram-bot/src/handlers/: message.py  task.py
services/whisper-service/: CMakeLists.txt  Containerfile  build-functions.sh  entrypoint.sh
services/whisper-service/include/: config.h  errors.h
services/whisper-service/include/clients/: minio.h  whisper.h
services/whisper-service/include/handlers/: health.h  task.h
services/whisper-service/src/: config.cpp  main.cpp  server.cpp
services/whisper-service/src/clients/: minio.cpp  whisper.cpp
services/whisper-service/src/handlers/: health.cpp  task.cpp
